# GetWeatherData

./: CONTRIBUTING.rst  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
GetWeatherData.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: __init__.py  column_names.json  ec_config.ini  ec_config.json
data/GIS/PAVICS/: RegionAgricolesQC.shx  RegionAgricolesQC_boundary.geojson  RegionAgricolesQC_old.geojson
data/GIS/QC_admin_regions/: FADQ_Matching_munics_s.dbf  FADQ_Matching_munics_s.shx  FADQ_munics_s.dbf  FADQ_munics_s.shx  FADQ_munics_s_ForMap.dbf  FADQ_munics_s_ForMap.shx  arron_l.dbf  arron_l.shp  arron_l.shp.xml  arron_l.shx  arron_s.dbf  arron_s.shp  arron_s.shp.xml  arron_s.shx  comet_l.dbf  comet_l.shp  comet_l.shp.xml  comet_l.shx  comet_s.dbf  comet_s.shp  comet_s.shp.xml  comet_s.shx  mrc_l.dbf  mrc_l.shp.xml  (+16 more)
data/rimpro_format/: FRP_ACADIE_saved_forecast.csv  FRP_BEAUCVLE_saved_forecast.csv  FRP_COMPTN_saved_forecast.csv  FRP_DSCHAMBLT_saved_forecast.csv  FRP_DUNHM_saved_forecast.csv  FRP_FARNHAM_saved_forecast.csv  FRP_FRANKN_saved_forecast.csv  FRP_FRLBRG_saved_forecast.csv  FRP_GARAGF_saved_forecast.csv  FRP_HEMGFD_saved_forecast.csv  FRP_HFLEUR_saved_forecast.csv  FRP_HRYVIL_saved_forecast.csv  FRP_KAMRSKA_saved_forecast.csv  FRP_LAPECHE_saved_forecast.csv  FRP_MAMTY_saved_forecast.csv  FRP_MTLAURIER_saved_forecast.csv  FRP_NICLET_saved_forecast.csv  FRP_NRICHMOND_saved_forecast.csv  FRP_OKA_saved_forecast.csv  FRP_ORLEAN_saved_forecast.csv  FRP_ORMTWN_saved_forecast.csv  FRP_ROUGEM_saved_forecast.csv  FRP_RVLOUP_saved_forecast.csv  FRP_SIMCOE_saved_forecast.csv  FRP_STANCT_saved_forecast.csv  FRP_STANNB_saved_forecast.csv  FRP_STCHRISAR_saved_forecast.csv  FRP_STGDG_saved_forecast.csv  FRP_STGREG_saved_forecast.csv  FRP_STJOS_saved_forecast.csv  FRP_STPABB_saved_forecast.csv  FRP_TILLY_saved_forecast.csv  FRP_VCASSIDY_saved_forecast.csv
data/saved_forecasts/: ACADIE_saved_forecast.csv  BEAUCVLE_saved_forecast.csv  COMPTN_saved_forecast.csv  DSCHAMBLT_saved_forecast.csv  DUNHM_saved_forecast.csv  FARNHAM_saved_forecast.csv  FRANKN_saved_forecast.csv  FRLBRG_saved_forecast.csv  GARAGF_saved_forecast.csv  HEMGFD_saved_forecast.csv  HFLEUR_saved_forecast.csv  HILAIR_saved_forecast.csv  HRYVIL_saved_forecast.csv  KAMRSKA_saved_forecast.csv  LAPECHE_saved_forecast.csv  MAMTY_saved_forecast.csv  MTLAURIER_saved_forecast.csv  NICLET_saved_forecast.csv  NRICHMOND_saved_forecast.csv  OKA_saved_forecast.csv  ORLEAN_saved_forecast.csv  ORMTWN_saved_forecast.csv  ROUGEM_saved_forecast.csv  RVLOUP_saved_forecast.csv  STANCT_saved_forecast.csv  STANNB_saved_forecast.csv  STCHRISAR_saved_forecast.csv  STCLOT_saved_forecast.csv  STECEC_saved_forecast.csv  STGDG_saved_forecast.csv  STGENB_saved_forecast.csv  STGREG_saved_forecast.csv  STJOS_saved_forecast.csv  STPABB_saved_forecast.csv  STPRBROU_saved_forecast.csv  STSTEAD_saved_forecast.csv  TILLY_saved_forecast.csv  TRIVAERO_saved_forecast.csv  VCASSIDY_saved_forecast.csv
data/saved_vs_forecasts/: ACADIE_vs.csv  BEAUCVLE_bru_nowcast.csv  BEAUCVLE_vs.csv  COMPTN_vs.csv  DSCHAMBLT_vs.csv  DUNHM_vs.csv  FARNHAM_vs.csv  FRANKN_vs.csv  FRLBRG_vs.csv  GARAGF_vs.csv  HEMGFD_vs.csv  HFLEUR_vs.csv  HILAIR_vs.csv  HRYVIL_vs.csv  KAMRSKA_vs.csv  LAPECHE_vs.csv  MAMTY_vs.csv  MTLAURIER_vs.csv  NICLET_vs.csv  NRICHMOND_vs.csv  OKA_vs.csv  ORLEAN_vs.csv  ORMTWN_vs.csv  ROUGEM_vs.csv  RVLOUP_vs.csv  STANCT_vs.csv  STANNB_vs.csv  STCHRISAR_vs.csv  STCLOT_vs.csv  STECEC_vs.csv  STGDG_vs.csv  STGENB_vs.csv  STGREG_vs.csv  STJOS_vs.csv  STPABB_vs.csv  STPRBROU_vs.csv  STSTEAD_vs.csv  TILLY_vs.csv  TRIVAERO_vs.csv  VCASSIDY_vs.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
process/: combine_bru_hrdps.py  combine_station_hrdps.py  combine_wu_hrdps.py  forecast_to_rimpro.py  nowcast_to_rimpro.py  to_rimpro.py
run/: Load_EnvCan_Forecast_p1.bat  Load_EnvCan_Forecast_p1.py  historical_rainfall_amounts.py
source/: __init__.py
source/Daymet/: Get_Daymet_Area.py  Get_Daymet_SinglePixel.py  pyDaymet_functions.py
source/Forecasts/: 20240307T00Z_MSC_HRDPS_TMP_AGL-2m_RLatLon0.0225_PT010H.grib2  Chemins_Acces.txt  Datamart_extract.py  ECCC_Forecasts.py  ECCC_Forecasts_Asyncio.py  ECCC_Forecasts_v2.py  Forecast_to_RIMPro.py  Nowcast_to_RIMPro.py  config.ini  datamart_extract.py  ec_config.ini  ec_forecasts.py  save_ec_nowcast.py  save_eccc_nowcast.py  utils.py
src/getweatherdata/: __init__.py  cli.py
test/: test_ECCC_Forecasts.py  test_get_SM_data_v2.py
tests/: __init__.py  test_ECCC_Forecasts.py  test_emailert.py  test_get_SM_data_v2.py  test_get_daymet_area.py  test_source_extraction.py
utils/: load_areas.py  mailert.py  subsetting.py  utils.py
(+65 files in other folders)
