[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getweatherdata"
version = "0.1.0"
description = "getweatherdata facilitates the download and processing of various types of meteorological data, providing easy access and manipulation of weather datasets"
readme = "README.rst"
authors = [
  {name = "IRDA Agrometeo", email = "sebastien.rougerie-durocher@irda.qc.ca"}
]
maintainers = [
  {name = "IRDA Agrometeo", email = "sebastien.rougerie-durocher@irda.qc.ca"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/agrometeoSRD/getweatherdata/issues"
changelog = "https://github.com/agrometeoSRD/getweatherdata/blob/master/changelog.md"
homepage = "https://github.com/agrometeoSRD/getweatherdata"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

